# alpyca

./: .gitignore  .pypirc  Alpyca.pyproj  Alpyca.sln  AlpycaClient.pyproj  AlpycaClient.sln  CHANGES.rst  EasySnippetModuleHeader.py  ImageTests.py  LICENSE.txt  RBD-Notes.txt  README.md  conftest.py  devtest.py  disc2test.py  pyproject.toml  requirements.txt  setup.cfg  simconf.py
PackageTesting/: PackageTesting.pyproj
PackageTesting/tenv/Scripts/: Activate.ps1  activate  activate.bat
PyTest/: test_camera.py  test_covercalibrator.py  test_device.py  test_dome.py  test_exceptions.py  test_filterwheel.py  test_focuser.py  test_observingconditions.py  test_rotator.py  test_safetymonitor.py  test_switch.py  test_telescope.py
alpaca/: camera.py  covercalibrator.py  device.py  discovery.py  discovery2.py  docenum.py  dome.py  exceptions.py  filterwheel.py  focuser.py  management.py  observingconditions.py  rotator.py  safetymonitor.py  switch.py  telescope.py
docs/: alpaca.mustache  makepdf.bat  makerst.bat
docs/source/: alpaca.camera.rst  alpaca.covercalibrator.rst  alpaca.device.rst  alpaca.discovery.rst  alpaca.dome.rst  alpaca.exceptions.rst  alpaca.filterwheel.rst  alpaca.focuser.rst  alpaca.management.rst  alpaca.observingconditions.rst  alpaca.rotator.rst  alpaca.safetymonitor.rst  alpaca.switch.rst  alpaca.telescope.rst  alpacaclasses.rst  alpacamodules.rst  alpyca.rts  alpyca.rtt  alpycaORIG.rts  camerasample.rst  conf.py  docintenum.rst  examples.rst  faq.rst  index.rst  introduction.rst  miscellany.rst
docs/source/_static/css/: ascom.css
src/alpaca/: __init__.py  covercalibrator.py  device.py  dome.py  focuser.py  rotator.py  safetymonitor.py  telescope.py
