[tool.poetry]
name = "alpaca-client"
version = "0.1.0"
description = "Client API for all ASCOM Alpaca devices, management, and discovery"
authors = ["Robert B. Denny <rdenny@dc3.com>"]
license = "LICENSE"
readme = "README.md"
repository = "https://github.com/BobDenny/alpyca-client"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Astronomy"
]
packages = [ 
	{include = "alpaca"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BobDenny/alpyca-client/issues"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
netifaces = "^0.11.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
