[tool.poetry]
name = "alpyca"
version = "2.0.4" 
description = "API library for all ASCOM Alpaca devices, management, and discovery"
authors = ["Robert B. Denny <rdenny@dc3.com>"]
license = "LICENSE"
readme = "README.md"
documentation = "https://ascom-standards.org/alpyca/index.html"
repository = "https://github.com/BobDenny/alpyca"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Astronomy"
]
packages = [ 
	{include = "alpaca"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BobDenny/alpyca/issues"
"ASCOM Initiative" = "https://ascom-standards.org/"
"ASCOM Developer Forum" = "https://ascomtalk.groups.io/g/Developer/"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
netifaces = "^0.11.0"
typing-extensions = "^4.2.0"
python-dateutil = "^2.8.2"
enum-tools = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytz = "^2022.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--setupshow -ra"
testpaths = [
    "PyTest"
]

[tool.rstcheck]
ignore_directives = [
    "autoclass",
    "automodule",
    "autofunction",
    "autoenum"
]
ignore_messages = [
    "Hyperlink target .* is not referenced"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
