#
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://docs.python.org/3/library/configparser.html
#
[metadata]
name = alpyca-client-rdenny
version = 0.0.1
author = Robert B. Denny
author_email = rdenny@dc3.com
description = Client API for all ASCOM Alpaca devices, management, and discovery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BobDenny/alpyca-client
project_urls =
    Bug Tracker = https://github.com/BobDenny/alpyca-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src